wip - new integration system

--- a/examples/starter/src/pages/index.astro
+++ b/examples/starter/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
 // Component Imports
 import Tour from '../components/Tour.astro';
+import {Sentry} from 'astro:sentry';
+import {Button, Avatar} from 'astro:tailwind-ui';
 // You can import components from any supported Framework here!
 /* ASTRO:COMPONENT_IMPORTS */
 
